# pxlFramework

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  Notes.txt  README.md
TestApp/: CMakeLists.txt  FrameworkConfig.yaml  resources.rc
TestApp/assets/models/: Khermiet.fbx  golf_ball.glb
TestApp/assets/models/Pizza Disc/: F2_Item_Flyingdisk_Toy_Pizza.dae  F2_Item_Flyingdisk_Toy_Pizza_S.dae
TestApp/assets/shaders/: camera.glsl  compile.bat  first.vert  vulkan.frag  vulkan.vert
TestApp/assets/shaders/compiled/: frag.spv  vert.spv
TestApp/src/: Entrypoint.cpp  TestApplication.cpp  TestApplication.h
TestApp/src/Tests/: AudioTest.cpp  AudioTest.h  CubesTest.cpp  CubesTest.h  EmptyApp.cpp  EmptyApp.h  LinesTest.cpp  LinesTest.h  ModelViewer.cpp  ModelViewer.h  MultiWindow.cpp  MultiWindow.h  OGLVK.cpp  OGLVK.h  QuadsTest.cpp  QuadsTest.h  Test.h  WindowTest.cpp  WindowTest.h
pxlFramework/: CMakeLists.txt  pxl.h
pxlFramework/inc/: pxl.h
pxlFramework/include/: pxl.h
pxlFramework/include/pxl/: pxl.h
pxlFramework/modules/discord/: CMakeLists.txt
pxlFramework/modules/discord/src/: DiscordRPC.cpp  DiscordRPC.h
pxlFramework/resources/shaders/: coloured_vertex.frag  coloured_vertex.vert  compile-spirv.bat  line_vulkan.frag  line_vulkan.vert  mesh_ogl.vert  quad.frag  quad.vert  quad_coloured.frag  quad_coloured.vert  quad_ogl.frag  quad_ogl.vert  quad_textured.vert  quad_textured_ogl.frag  quad_vk.frag  quad_vk.vert  textured_vertex.frag  textured_vertex.vert  vulkan-test.vert
pxlFramework/resources/shaders/compiled/: frag.spv  line_vert.spv  vert.spv
pxlFramework/resources/shaders/opengl/: line_ogl.vert  quad_textured_ogl.frag
pxlFramework/resources/shaders/vulkan/: compile-spirv.bat
pxlFramework/src/: Application.cpp  Application.h  PCH.h  Window.cpp  Window.h
pxlFramework/src/Audio/: AudioManager.cpp  AudioManager.h  AudioTrack.cpp  AudioTrack.h  AudioUtil.h
pxlFramework/src/Core/: Animation.cpp  Animation.h  Application.cpp  Application.h  Assert.h  ButtonCodes.h  Colour.h  Config.cpp  Config.h  Cursor.h  DiscordRPC.cpp  DiscordRPC.h  FrameworkConfig.h  Gamepad.cpp  Gamepad.h  GamepadCodes.h  Image.h  IniConfig.cpp  IniConfig.h  Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  KeyCodes.h  Logger.cpp  Logger.h  Math.h  Monitor.cpp  Monitor.h  MouseCodes.h  Platform.cpp  Platform.h  Profiler.h  Rect.h  Size.h  Stopwatch.h  Window.cpp  Window.h  WindowMode.h
pxlFramework/src/Core/Events/: Event.h  EventHandler.h  EventManager.cpp  EventManager.h  EventType.h  GamepadEvents.h  IEventHandler.h  InputEvent.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
pxlFramework/src/Core/Logging/: ApplicationLog.h  FrameworkLog.h  Logger.cpp  Logger.h
pxlFramework/src/Core/Window/: WindowGLFW.cpp  WindowGLFW.h  WindowSDL.cpp  WindowSDL.h
pxlFramework/src/Debug/: DebugOverlay.cpp  DebugOverlay.h  Profiler.cpp  Profiler.h
pxlFramework/src/Debug/GUI/: GUI.cpp  GUI.h  GUIBase.h  GUIOpenGL.cpp  GUIOpenGL.h  GUIVulkan.cpp  GUIVulkan.h
pxlFramework/src/Debug/ImGui/: ImGuiBase.h  ImGuiOpenGL.cpp  ImGuiOpenGL.h  ImGuiVulkan.cpp  ImGuiVulkan.h  pxl_ImGui.cpp  pxl_ImGui.h
pxlFramework/src/Entities/: Entity.cpp  Entity.h
pxlFramework/src/Entities/Components/: Component.h  TransformComponent.h
pxlFramework/src/Input/: Gamepad.cpp  Gamepad.h  GamepadManager.cpp  GamepadManager.h  InputSystem.cpp  InputSystem.h  MouseCodes.h
pxlFramework/src/Input/Events/: Event.h  EventTypes.h  GamepadEvents.h  InputEvent.h  KeyboardEvents.h  MouseButtonDownEvent.h  MouseButtonEvent.h  MouseEvents.h  MouseScrollEvent.h
pxlFramework/src/Platform/: Platform.h  SleepTimer.h
pxlFramework/src/Platform/Linux/: LinuxHighResSleepTimer.h
pxlFramework/src/Platform/Windows/: WindowsFileDialog.h  WindowsHighResSleepTimer.h  WindowsUtils.h
pxlFramework/src/Renderer/: AnimatedTexture.h  BaseCamera.h  Buffer.cpp  Buffer.h  BufferLayout.h  Camera.cpp  Camera.h  Device.h  Framebuffer.h  GPUBuffer.cpp  GPUBuffer.h  GPUResource.h  GraphicsAPI.cpp  GraphicsAPI.h  GraphicsAPIType.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsDevice.h  GraphicsInstance.cpp  GraphicsInstance.h  GraphicsPipeline.h  ImGuiRenderer.h  Image.h  IndexBuffer.h  Mesh.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Pipeline.cpp  Pipeline.h  PipelineLibrary.cpp  PipelineLibrary.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  RendererAPIType.h  RendererConfig.h  RendererData.h  (+21 more)
pxlFramework/src/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLOrthographicCamera.cpp  OpenGLOrthographicCamera.h  OpenGLPerspectiveCamera.cpp  OpenGLPerspectiveCamera.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTexture2D.cpp  OpenGLTexture2D.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
pxlFramework/src/Renderer/Primitives/: Cube.h  Line.h  Primitive.h  Quad.h  Triangle.h
pxlFramework/src/Renderer/Vulkan/: VulkanAPI.cpp  VulkanAPI.h  VulkanAllocator.cpp  VulkanAllocator.h  VulkanBindlessTextureHandler.cpp  VulkanBindlessTextureHandler.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanErrorCheck.cpp  VulkanErrorCheck.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanGPUBuffer.cpp  VulkanGPUBuffer.h  VulkanGraphicsContext.cpp  VulkanGraphicsContext.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanGraphicsInstance.cpp  VulkanGraphicsInstance.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanImGuiRenderer.cpp  (+19 more)
pxlFramework/src/Utils/: DiscordRPC.cpp  DiscordRPC.h  Easing.cpp  Easing.h  EnumStringHelper.cpp  EnumStringHelper.h  FIleSystem.h  FileLoader.cpp  FileLoader.h  FileSystem.cpp  FileSystem.h  ModelLoader.cpp  ModelLoader.h  Random.cpp  Random.h  TextureLoader.cpp  TextureLoader.h
(+8 files in other folders)
